[package]
name = "disrustian"
version = "0.1.0"
authors = ["Irjan Olsen <irjan.olsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
typenum = "1.14.0"
